--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,13 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class for iOS styleª icons.
   cupertino_icons: ^0.1.2
+  woodemi_service:
+    git: git@gitlab.com:woodemi/sdk/woodemi-service-flutter.git
+    version: 0.2.0
+
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
